<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="guilherme.goodhire.HomeActivity"
    android:background="@android:color/holo_blue_dark">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/guess_the_word2"
        android:id="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="225dp" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonSinglePlayer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="295dp">

        <Button
            android:text="@string/buttonSinglePlayer"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:onClick="startSinglePlayerGame"
            android:id="@+id/buttonSinglePlayer"
            android:textColorLink="@android:color/holo_orange_light"
            android:textSize="24dp"
            android:textColor="@android:color/background_light"
            android:background="@color/colorPrimary"
            android:layout_above="@+id/buttonMultiplayer"
            android:layout_alignLeft="@+id/buttonMultiplayer"
            android:layout_alignStart="@+id/buttonMultiplayer"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="21dp"
            android:layout_marginRight="21dp" />

        <Button
            android:text="@string/buttonMultiplayer"
            android:layout_height="40dp"
            android:id="@+id/buttonMultiplayer"
            android:textColor="@android:color/background_light"
            android:textColorLink="@android:color/holo_orange_light"
            android:textSize="24dp"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_above="@+id/buttonAbout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="21dp"
            android:layout_marginRight="21dp" />

        <Button
            android:text="@string/buttonScore"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/buttonScore"
            android:textColorLink="@android:color/holo_orange_light"
            android:textColor="@android:color/black"
            android:textSize="22dp"
            android:textAlignment="center"
            android:background="@android:drawable/btn_default"
            android:onClick="openScores"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/buttonAbout"
            android:layout_alignStart="@+id/buttonAbout"
            android:layout_marginRight="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginBottom="5dp" />

        <Button
            android:text="@string/buttonAbout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/buttonAbout"
            android:textColorLink="@android:color/holo_orange_light"
            android:textColor="@android:color/black"
            android:textSize="22dp"
            android:textAlignment="center"
            android:background="@android:drawable/btn_default"
            android:onClick="aboutActivity"
            android:layout_above="@+id/buttonScore"
            android:layout_alignLeft="@+id/buttonMultiplayer"
            android:layout_alignStart="@+id/buttonMultiplayer"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp" />
    </LinearLayout>

</RelativeLayout>
